--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,4 +16,4 @@ jobs:
     - uses: actions/checkout@v3
     - uses: docker/setup-qemu-action@v1
     - name: Build the Docker image
-      run: docker buildx build --platform linux/arm/v7 -t jonolo/demo:latest .
+      run: docker buildx build --platform linux/arm/v7 -t jonolo/neeo-meta:latest --push .
